nav finish; usestate pending

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,18 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss/base";
+
+@import "tailwindcss/components";
+
+@import "tailwindcss/utilities";
+
+@import url("https://fonts.googleapis.com/css?family=Roboto+Mono&subset=greek,cyrillic");
+
+@layer base {
+    body {
+        @apply font-[Roboto];
+    }
+    li {
+        @apply px-4;
+        @apply cursor-pointer
+    }
+}
 
